# warp-rest-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  example.env  questions.json
handle_errors/: Cargo.toml
handle_errors/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
migrations/: 20230129140342_questions_table.up.sql  20230129151005_answers_table.down.sql  20230131020159_create_accounts_table.up.sql  20230131023048_extend_questions_table.down.sql  20230131023048_extend_questions_table.up.sql  20230131023126_extend_answers_table.down.sql  20230131023126_extend_answers_table.up.sql
mock-server/: Cargo.toml
mock-server/src/: lib.rs
src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: answer.rs  pagination.rs  question.rs
