[package]
name = "warp-rest-api"
version = "0.1.0"
edition = "2021"
authors = ["Nrishinghananda Roy <royrustdev@gmail.com>"]
description = "A REST API created with warp framework that lets it users to ask and answer questions."
categories = ["web server", "api"]
keywords = ["web server","api", "warp", "rest api", "project", "portfolio"]
repository = "https://github.com/royrustdev/warp-rest-api.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[badges]
maintenance = { status = "experimental" }

[dependencies]
warp = "0.3"
tokio = { version = "1.2", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
handle_errors = {path = "handle_errors"}
uuid = {version = "0.8", features = ["v4"]}
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "migrate", "postgres"]}
