[package]
name = "warp-rest-api"
version = "0.1.0"
edition = "2021"
authors = ["Nrishinghananda Roy <royrustdev@gmail.com>"]
description = "A REST API created with warp framework that lets it users to ask and answer questions."
categories = ["web server", "api"]
keywords = ["web server","api", "warp", "rest api", "project", "portfolio"]
repository = "https://github.com/royrustdev/warp-rest-api.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[badges]
maintenance = { status = "experimental" }

# Check Cargo documentation for details
# Default parameters
[profile.dev]
opt-level = 0
debug = true
# split-debuginfo = '...' # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

# Default parameters
[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...' # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[dependencies]
warp = "0.3"
tokio = { version = "1.2", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
handle_errors = {path = "handle_errors"}
uuid = {version = "0.8", features = ["v4"]}
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "migrate", "postgres"]}
reqwest = { version = "0.11", features = ["json"]}
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
chrono = "0.4.19"
dotenv = "0.15.0"
clap = { version = "3.1.7", features = ["derive"] }
proc-macro2 = "1.0.37"
openssl = { version = "0.10.32", features = ["vendored"] }

[build-dependencies]
platforms = "2.0.0"

