[package]
name = "handle_errors"
version = "0.1.0"
edition = "2021"
authors = ["Nrishinghananda Roy <royrustdev@gmail.com>"]
description = "custom error handler for warp-rest-api"
categories = ["api"]
keywords = ["api"]
repository = "https://github.com/royrustdev/warp-rest-api.git"
license = "MIT OR Apache-2.0"
readme = "../README.md"
publish = false

[dependencies]
warp = "0.3"
tracing = { version = "0.1", features = ["log"]}
reqwest = "0.11"
reqwest-middleware = "0.1.1"
rust-argon2 = "1.0"
sqlx = { version = "0.5", features = [ "postgres" ] }
